Fix HTML formatting issues in tentang.html

--- a/tentang.html
+++ b/tentang.html
@@ -33,7 +33,7 @@
               <a href="tentang.html" class="nav-link active">Tentang Kami</a>
             </li>
             <li class="dropdown-item">
-              <a href="#" class="nav-link">
+              <a href="#" class="nav-link dropdown-toggle">
                 Layanan <i class="fas fa-chevron-down dropdown-icon"></i>
               </a>
               <ul class="dropdown-menu">
@@ -195,3 +195,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
