--- a/layanan-perbaikan.html
+++ b/layanan-perbaikan.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="id">
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16651311424"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-16651311424');
+    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="HDB-LOGO.png" />
@@ -259,3 +267,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
